--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: google_fonts
-description: EXPERIMENTAL. A package to include fonts from fonts.google.com.
+description: A package to include fonts from fonts.google.com.
 version: 0.1.1
-homepage: https://github.com/material-components/material-components-flutter-experimental/tree/master/google_fonts
+homepage: https://github.com/material-foundation/google-fonts-flutter
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
